<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E6F8F7"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:src="@drawable/shape" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="118dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:paddingTop="70dp"
            android:text="@string/welcome_back"
            android:textSize="25dp"
            android:textStyle="bold" />

    </FrameLayout>


    <ImageView
        android:layout_width="221dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@mipmap/login_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_your_username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_your_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:textSize="16dp"
            android:paddingRight="40dp"
            android:layout_marginTop="10dp"
            android:textAlignment="viewEnd"
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Forgot Password"
            android:gravity="end" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#55CBD2"
            android:text="@string/sign_in"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/don_t_have_an_account"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="#75B8B3"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>